crates/mega-evm/tests/tracers/snapshots/tracers__harness__nested_inner_revert__eip3155.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: trace
---
{"pc":0,"depth":1,"opName":"PUSH0","op":95,"gas":"0x18406a","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":1,"depth":1,"opName":"PUSH0","op":95,"gas":"0x184068","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":2,"depth":1,"opName":"PUSH0","op":95,"gas":"0x184066","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x0","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":3,"depth":1,"opName":"PUSH0","op":95,"gas":"0x184064","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x0","0x0","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":4,"depth":1,"opName":"PUSH32","op":127,"gas":"0x184062","reservoir":"0x0","stateGas":"0x0","gasCost":"0x3","stack":["0x0","0x0","0x0","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":37,"depth":1,"opName":"PUSH20","op":115,"gas":"0x18405f","reservoir":"0x0","stateGas":"0x0","gasCost":"0x3","stack":["0x0","0x0","0x0","0x0","0x1"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":58,"depth":1,"opName":"GAS","op":90,"gas":"0x18405c","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x0","0x0","0x0","0x0","0x1","0x400003"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":59,"depth":1,"opName":"CALL","op":241,"gas":"0x18405a","reservoir":"0x0","stateGas":"0x0","gasCost":"0x17fb8e","stack":["0x0","0x0","0x0","0x0","0x1","0x400003","0x18405a"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":0,"depth":2,"opName":"PUSH32","op":127,"gas":"0x17bbba","reservoir":"0x0","stateGas":"0x0","gasCost":"0x3","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":33,"depth":2,"opName":"PUSH32","op":127,"gas":"0x17bbb7","reservoir":"0x0","stateGas":"0x0","gasCost":"0x3","stack":["0x1"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":66,"depth":2,"opName":"SSTORE","op":85,"gas":"0x17bbb4","reservoir":"0x0","stateGas":"0x0","gasCost":"0x1e294","stack":["0x1","0x1"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":67,"depth":2,"opName":"PUSH1","op":96,"gas":"0x15d920","reservoir":"0x0","stateGas":"0x17e80","gasCost":"0x3","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":69,"depth":2,"opName":"PUSH0","op":95,"gas":"0x15d91d","reservoir":"0x0","stateGas":"0x17e80","gasCost":"0x2","stack":["0x42"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":70,"depth":2,"opName":"PUSH0","op":95,"gas":"0x15d91b","reservoir":"0x0","stateGas":"0x17e80","gasCost":"0x2","stack":["0x42","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":71,"depth":2,"opName":"LOG1","op":161,"gas":"0x15d919","reservoir":"0x0","stateGas":"0x17e80","gasCost":"0x2ee","stack":["0x42","0x0","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":72,"depth":2,"opName":"PUSH0","op":95,"gas":"0x15d62b","reservoir":"0x0","stateGas":"0x17e80","gasCost":"0x2","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":73,"depth":2,"opName":"PUSH0","op":95,"gas":"0x15d629","reservoir":"0x0","stateGas":"0x17e80","gasCost":"0x2","stack":["0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":74,"depth":2,"opName":"REVERT","op":253,"gas":"0x15d627","reservoir":"0x0","stateGas":"0x17e80","gasCost":"0x0","stack":["0x0","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0","error":"Revert"}
{"pc":60,"depth":1,"opName":"POP","op":80,"gas":"0x17c2b3","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":61,"depth":1,"opName":"PUSH0","op":95,"gas":"0x17c2b1","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":62,"depth":1,"opName":"PUSH0","op":95,"gas":"0x17c2af","reservoir":"0x0","stateGas":"0x0","gasCost":"0x2","stack":["0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":63,"depth":1,"opName":"LOG0","op":160,"gas":"0x17c2ad","reservoir":"0x0","stateGas":"0x0","gasCost":"0xc77","stack":["0x0","0x0"],"returnData":"0x","refund":"0x0","memSize":"0x0"}
{"pc":64,"depth":1,"opName":"STOP","op":0,"gas":"0x17b636","reservoir":"0x0","stateGas":"0x0","gasCost":"0x0","stack":[],"returnData":"0x","refund":"0x0","memSize":"0x0","error":"Stop"}
{"stateRoot":"0x0000000000000000000000000000000000000000000000000000000000000000","output":"0x","gasUsed":"0x12f5c","pass":true,"fork":"Osaka"}
