crates/mega-evm/tests/tracers/snapshots/tracers__harness__nested_inner_revert__prestate.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.prestate(false)"
---
{
  "0x0000000000000000000000000000000000000000": {
    "balance": "0x0"
  },
  "0x0000000000000000000000000000000000400000": {
    "balance": "0x38d7ea4c68000"
  },
  "0x0000000000000000000000000000000000400002": {
    "balance": "0x1",
    "code": "0x5f5f5f5f7f00000000000000000000000000000000000000000000000000000000000000017300000000000000000000000000000000004000035af1505f5fa000"
  },
  "0x0000000000000000000000000000000000400003": {
    "balance": "0x0",
    "code": "0x7f00000000000000000000000000000000000000000000000000000000000000017f00000000000000000000000000000000000000000000000000000000000000015560425f5fa15f5ffd",
    "storage": {
      "0x0000000000000000000000000000000000000000000000000000000000000001": "0x0000000000000000000000000000000000000000000000000000000000000000"
    }
  },
  "0x4200000000000000000000000000000000000019": {
    "balance": "0x0"
  },
  "0x420000000000000000000000000000000000001a": {
    "balance": "0x0"
  },
  "0x420000000000000000000000000000000000001b": {
    "balance": "0x0"
  }
}
